# Cpp_projects-all-

./: .gitignore  Platformer exe files.rar  README.md  smart-resource-manager.rar
LUA_test/: LUA_test.cbp.save  LUA_test.depend  LUA_test.layout  LUA_test.layout.save  main.cpp  main.cpp.save
OOP_maze/: 11.txt  12.txt  OOP_maze.cbp  OOP_maze.depend  OOP_maze.layout  OOP_maze.layout.bak  OOP_maze.layout.save  c2DArray.h  c2DArray.h.save  cMaze.cpp  cMaze.cpp.save  cMaze.h  cMaze.h.save  findPath.cpp  main.cpp  main.cpp.save  tipe1_beta.cpp  tipe2.cpp  Альтернативная кодировка — Википедия.mht
SCHYA-99 Glore/: Sprites.info  ToDo.list  cBackGround.cpp  cBackGround.h  cEnemy.cpp  cEnemy.h  cExplore.cpp  cExplore.h  cGUI.cpp  cGUI.h  cPlayer.cpp  cPlayer.h  cSpriteEngine.cxx  cSpriteEngine.h  cSpriteRepository.cxx  cSpriteRepository.h  cTraektoryLibrary.cpp  cTraektoryLibrary.h  cTrigonometri.cpp  cTrigonometri.h  cWearon.cpp  cWearon.h  cWidgets.cpp  cWidgets.h  csprite.cxx  csprite.h  game.cbp  game.depend  game.layout  main.cpp  main.txt  stderr.txt
Tutorial-11/: Tutorial.sln
Tutorial-12/: StarUML.tif  Untitled.uml  Untitled.~ml  t12.cbp  t12.layout  Создание игры.doc
boost_asio_simple_server_client/: boost_asio_simple_server_client.workspace.layout  chat_message.hpp
boost_asio_test/: boost_asio_test.cbp  boost_asio_test.cbp.bak  boost_asio_test.depend  boost_asio_test.layout  main.cpp  main.cpp.bak
kore/: Untitled.uml  Untitled.~ml  kore.cbp.save  kore.layout  kore.layout.save
main Game Цикл/: main Game Цикл.cpp  Игровые циклы или ЭлектроКардиоГама _ Хабрахабр.html  Игровые циклы или ЭлектроКардиоГама перевод.doc
openCV_test/: main.cpp  openCV_test.cbp  openCV_test.cbp.bak  openCV_test.depend  openCV_test.layout  openCV_test.layout.bak
sfml_test/: Level_megaman.tmx  anim.hpp  main.cpp  plat_test.tmx  sfml_test.cbp  sfml_test.depend  sfml_test.layout  sfml_test.layout.save
sfml_test_1/: level.cpp  main.cpp  sfml_test.cbp  sfml_test.depend  sfml_test.layout  sfml_test.layout.save
store/: cSudoku.hpp  rand.cpp  rand.hpp  util.hpp
test_pattern/: .gitignore  CMakeLists.txt  win_build.cmd
test_pattern/include/: macros.h
test_pattern/src/: abstractFactory.cpp  composit.cpp  decorator.cpp  factory.cpp  iterator.cpp  main.cpp  observer.cpp  state.cpp  stratege.cpp  templMethod.cpp  visitor.cpp
test_pattern/src/review_questions/: rq1.cpp  rq2.cpp  rq3.cpp  rq3_binary_tree.cpp
testc/: main.c  main.c.bak  testc.cbp  testc.depend  testc.layout
tests/: c and c++ tests.workspace  c and c++ tests.workspace.layout  main.cpp  main.cpp.bak  tests.cbp  tests.cbp.bak  tests.depend  tests.layout  tests.layout.bak
upwork_COMP10002/: assmt1.c  output1_.txt  skeleton.c  upwork_COMP10002.cbp  (+1 more)
xml/: main.cpp  (+7 more)
(+174 files in other folders)
